syntax = "proto3";

package proto;

service Service {
    rpc GetProfile(GetProfileRequest) returns (ProfileResponse) {}
    rpc SetProfile(SetProfileRequest) returns (ProfileResponse) {}
}

message GetProfileRequest {
    string UserID = 1;
}

message SetProfileRequest {
    string UserID = 1;
    //
    string Address1 = 2;
    string Address2 = 3;
    string City = 4;
    string State = 5;
    string Country = 6;
    string Zip = 7;
    //
    string PhotoURL = 8;
    string FirstName = 9;
    string LastName = 10;
    uint32 BirthDate = 11;
    //
    string Language = 12;
}

message ProfileResponse {
    string UserID = 1;
    //
    string Address1 = 2;
    string Address2 = 3;
    string City = 4;
    string State = 5;
    string Country = 6;
    string Zip = 7;
    //
    string PhotoURL = 8;
    string FirstName = 9;
    string LastName = 10;
    uint32 BirthDate = 11;
    //
    string Language = 12;
}

